# ClawGraph

./: .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MVP_ISSUES.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: README.md
benchmarks/agent_diff/: README.md  run_agent_diff_demo.py  run_agent_diff_demo.sh  run_agent_diff_logits_pipeline.py  run_agent_diff_logits_pipeline.sh
benchmarks/swebench_lite/: README.md  VALIDATION_LOG.md  enrich_benchmark_run.py  instance_packs.json  mini_swe_agent.proxy.yaml  prepare_local_instance.py  resolve_instance_pack.py  (+3 more)
docs/: index.md  package-lock.json  package.json
examples/: README.md
rfc/: README.md
schemas/: README.md
tests/: test_artifact_bootstrap.py  test_bootstrap.py  test_branch_pairs.py  test_branches_and_artifacts.py  test_cli.py  test_control_plane.py  test_curation.py  test_dashboard.py  test_docs_alignment.py  test_evaluation.py  test_export.py  test_import.py  test_inspect.py  test_integration_failures.py  test_integration_runtime.py  test_logits_integration.py  test_payload_store.py  test_phase2.py  test_proxy.py  test_query.py  test_quickstart_flow.py  test_runtime_client.py  test_runtime_openai.py  test_store_and_replay.py
tmp_docs/: clawtrace_docs_bundle.md  commonstack_gpt.md  doc.md
web/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
(+188 files in other folders)
