[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgraph"
version = "0.1.0a0"
description = "Immutable, branch-aware execution graphs for OpenClaw-style agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "ClawGraph Authors" }
]
keywords = [
  "agent",
  "openclaw",
  "rl",
  "tracing",
  "dataset",
  "distillation",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
clawgraph = "clawgraph.cli.main:main"

[project.optional-dependencies]
logits-runtime = [
  "tinker>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/wangx-u/agent-rl/tree/main/clawgraph"
Repository = "https://github.com/wangx-u/agent-rl"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
